refactor: LocalTime을 사용하는 객체를 NullableLocalTime의 구현체로 변경